@@ -1,3 +1,9 @@
+2009-10-25  Donal K. Fellows  <dkf@users.sf.net>
+
+	* library/text.tcl: [Bug 1854913]: Stop <Delete> actions from ever
+	deleting backwards, even when the insertion cursor is "at the end" of
+	the text widget.
+
 2009-10-24  Donal K. Fellows  <dkf@users.sf.net>
 
 	* macosx/ttkMacOSXTheme.c (RangeToFactor, TrackElementDraw)
